<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/costs_nav"
    app:startDestination="@id/costFragment">

    <fragment
        android:id="@+id/costFragment"
        android:name="com.whocare.android.app.ui.cost.list.CostFragment"
        android:label="@string/cost_list"
        tools:layout="@layout/fragment_cost_list" >
        <action
            android:id="@+id/action_costFragment_to_addCostFragment"
            app:destination="@id/addCostFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCostFragment"
        android:name="com.whocare.android.app.ui.cost.add.AddCostFragment"
        android:label="@string/add_cost"
        tools:layout="@layout/add_cost_fragment" >
        <action
            android:id="@+id/action_addCostFragment_to_costFragment"
            app:destination="@id/costFragment" />
        <argument
            android:name="currentCost"
            app:argType="com.whocare.android.app.data.model.Cost"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_addCostFragment_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="com.whocare.android.app.ui.product.ProductFragment"
        android:label="@string/product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_productFragment_to_addCostFragment"
            app:destination="@id/addCostFragment" />
    </fragment>
</navigation>